--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#616161</color>
-    <color name="colorPrimaryDark">#424242</color>
-    <color name="colorAccent">#448aff</color>
+    <color name="colorDefault">#616161</color>
+    <color name="colorDefaultDark">#424242</color>
+    <color name="colorDefaultLight">#ffffff</color>
+    <color name="colorStatusBar">#f5f5f5</color>
+    <color name="colorGrade7">#338e3c</color>
+    <color name="colorGrade8">#f9a825</color>
+    <color name="colorGrade9">#d32f2f</color>
+    <color name="colorGrade10">#303f9f</color>
+    <color name="colorGradeSyp">#000000</color>
 </resources>
