--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#EEEEEE">
+    android:background="@color/colorDefaultLight">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/barBg"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorDefaultLight"
+        card_view:cardBackgroundColor="@color/colorDefaultLight"
         card_view:cardElevation="4dp"
         card_view:cardCornerRadius="0dp">
 
@@ -25,22 +27,38 @@
                 android:layout_marginStart="16dp"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_vertical"
-                android:textColor="@color/colorGrade7"
+                android:textColor="@color/colorDefaultLight"
                 android:textSize="32sp" />
 
-            <Spinner
+            <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/levelchooser"
-                android:layout_width="138dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="end" />
+                android:layout_gravity="end"
+                app:backgroundTint="@color/colorDefaultLight" />
 
         </android.support.v7.widget.Toolbar>
 
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/subjectsList"
+    <ScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/subjectsList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
