--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,14 @@
     <color name="colorDefault">#616161</color>
     <color name="colorDefaultDark">#424242</color>
     <color name="colorDefaultLight">#ffffff</color>
-    <color name="colorStatusBar">#f5f5f5</color>
     <color name="colorGrade7">#338e3c</color>
     <color name="colorGrade8">#f9a825</color>
     <color name="colorGrade9">#d32f2f</color>
     <color name="colorGrade10">#303f9f</color>
-    <color name="colorGradeSyp">#000000</color>
+    <color name="colorGradeSyp">#090c1f</color>
+    <color name="darkGrade7">#28702f</color>
+    <color name="darkGrade8">#db9421</color>
+    <color name="darkGrade9">#b5282b</color>
+    <color name="darkGrade10">#263280</color>
+    <color name="darkGradeSyp">#000000</color>
 </resources>
