--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorDefaultLight">
+    android:background="@color/white">
 
     <android.support.v7.widget.CardView
         android:id="@+id/barBg"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        card_view:cardBackgroundColor="@color/colorDefaultLight"
+        card_view:cardBackgroundColor="@color/white"
         card_view:cardElevation="4dp"
         card_view:cardCornerRadius="0dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
+            android:theme="@style/MainBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -27,15 +27,15 @@
                 android:layout_marginStart="16dp"
                 android:fontFamily="sans-serif-light"
                 android:gravity="center_vertical"
-                android:textColor="@color/colorDefaultLight"
+                android:textColor="@color/white"
                 android:textSize="32sp" />
 
             <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/levelchooser"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                app:backgroundTint="@color/colorDefaultLight" />
+                android:gravity="end|center_vertical" />
 
         </android.support.v7.widget.Toolbar>
 
