--- a/app/src/main/res/layout/subject_item.xml
+++ b/app/src/main/res/layout/subject_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:paddingBottom="8dp"
+    tools:ignore="ContentDescription">
 
     <android.support.v7.widget.CardView
         android:id="@+id/subjectIconMask"
@@ -39,8 +41,7 @@
             android:layout_centerVertical="true"
             android:layout_width="26dp"
             android:layout_height="26dp"
-            android:src="@drawable/minus"
-            />
+            app:srcCompat="@drawable/minus" />
 
         <TextView
             android:id="@+id/subjectGradeValue"
@@ -50,7 +51,7 @@
             android:layout_height="match_parent"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
-            android:text="1.00"
+            android:text="@string/default_grade"
             style="@style/SubjectGrade" />
 
         <ImageView
@@ -59,7 +60,7 @@
             android:layout_centerVertical="true"
             android:layout_width="26dp"
             android:layout_height="26dp"
-            android:src="@drawable/plus" />
+            app:srcCompat="@drawable/plus" />
 
     </RelativeLayout>
 
