--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,8 +5,24 @@
     tools:context=".activity.MainActivity">
 
     <item
+        android:id="@+id/levelchooser"
+        app:showAsAction="always"
+        app:actionViewClass="android.support.v7.widget.AppCompatSpinner"
+        tools:ignore="AlwaysShowAction,MenuTitle" />
+
+    <item
+        android:id="@+id/action_share"
+        android:title="@string/action_share"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/action_clear"
         android:title="@string/action_clear"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_theme"
+        android:title="@string/action_theme"
         app:showAsAction="never" />
 
     <item
