--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,13 +12,16 @@
     </style>
 
     <style name="MainBar" parent="ThemeOverlay.AppCompat.ActionBar">
-        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlNormal">@android:color/white</item>
+    </style>
+    <style name="MainBar.Popup" parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorControlNormal">@android:color/white</item>
     </style>
 
     <style name="LevelChooser">
         <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:textAllCaps">true</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -49,7 +52,6 @@
         <item name="colorPrimary">@color/colorDefaultDark</item>
         <item name="colorPrimaryDark">@color/colorDefault</item>
         <item name="colorAccent">@color/colorGrade7</item>
-        <!--<item name="android:actionBarStyle">@style/MainBar</item>-->
     </style>
 
 </resources>
