--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,57 +1,39 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+        <item name="colorPrimaryDark">@color/darkSyp</item>
+    </style>
+
     <style name="MainTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorDefault</item>
-        <item name="colorPrimaryDark">@color/colorDefaultDark</item>
-        <item name="colorAccent">@color/colorGrade7</item>
-        <item name="android:statusBarColor" tools:targetApi="21">@color/colorDefaultDark</item>
-        <item name="android:navigationBarColor" tools:targetApi="21">@color/colorDefaultDark</item>
-        <item name="android:spinnerItemStyle">@style/LevelChooser</item>
-        <item name="android:actionBarStyle">@style/MainBar</item>
+        <item name="colorPrimary">@color/lightSyp</item>
+        <item name="colorPrimaryDark">@color/darkSyp</item>
+        <item name="colorAccent">@android:color/white</item>
+        <item name="android:statusBarColor" tools:targetApi="21">@color/darkSyp</item>
+        <item name="android:navigationBarColor" tools:targetApi="21">@color/darkSyp</item>
+        <item name="android:actionBarStyle">@style/MainTheme.Bar</item>
     </style>
 
-    <style name="MainBar" parent="ThemeOverlay.AppCompat.ActionBar">
+    <style name="MainTheme.Bar" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:background">@color/lightSyp</item>
         <item name="colorControlNormal">@android:color/white</item>
     </style>
-    <style name="MainBar.Popup" parent="ThemeOverlay.AppCompat.Light">
+    <style name="MainTheme.Bar.Popup" parent="ThemeOverlay.AppCompat.Light">
         <item name="colorControlNormal">@android:color/white</item>
     </style>
 
-    <style name="LevelChooser">
-        <item name="android:fontFamily">sans-serif-condensed</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
-    <style name="SubjectName">
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">#000000</item>
-    </style>
-
-    <style name="SubjectUnits">
+    <style name="SubjectDesc">
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="SubjectGrade">
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textSize">32sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/colorGrade7</item>
-    </style>
-
-    <style name="AboutTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorDefaultDark</item>
-        <item name="colorPrimaryDark">@color/colorDefault</item>
-        <item name="colorAccent">@color/colorGrade7</item>
+        <item name="android:textColor">@color/darkGrade7</item>
     </style>
 
 </resources>
